<resources>
    <string name="app_name">BookThoughts</string>
    <string name="next">Next</string>

    <string name="Welcome">Welcome to VOY</string>
    <string name="log_in_with_email">Log in with email:</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_with_email">Sign up with your email</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_with_a_username">Sign up with a username</string>
    <string name="log_in_with_your_username">Log in with your username</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="enter_book_author">Enter book author</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_book_description">Enter book description</string>
    <string name="description">Description</string>
    <string name="share">share</string>
    <string name="edit">edit</string>
    <string name="log_out">Log out</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="signing_up">Signing up...</string>
    <string name="logging_in">Logging in...</string>
    <string name="saving_book">saving book...</string>
    <string name="please_wait">Please wait...</string>
    <string name="click_here_to_add_image">Click here to add image</string>
    <string name="enter_thought_here">Enter thought here</string>
    <string name="thought">Thought</string>
    <string name="book_image">Book image</string>
    <string name="upload_image">Upload image</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="save_book">Save book</string>
    <string name="image_of_quote">image of quote</string>
    <string name="quotation_mark_top">quotation mark top</string>
    <string name="quotation_mark_bottom">quotation mark bottom</string>
    <string name="icon_image_of_a_brain">icon image of a brain</string>
    <string name="bookthoughts">BookThoughts</string>
    <string name="read_save_share">Read. Save. Share</string>
    <string name="your_favorite_reading_companion">Your favorite reading companion</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="send">Send</string>
    <string name="image_of_favorite_book">image of favorite book</string>
    <string name="clickable_image_to_favourite_a_book">clickable image to favourite a book</string>
    <string name="image_of_book">image of book</string>
    <string name="click_here_if_you_can_t_find_your_book">Click here if you can\'t find your book</string>
    <string name="choose">Choose</string>
    <string name="icon_image_of_a_camera">icon image of a camera</string>
    <string name="camera">Camera</string>
    <string name="icon_image_of_a_picture">icon image of a picture</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="image_of_a_smiley_cartoon_face">image of a smiley cartoon face</string>
    <string name="congrats">Congrats!</string>
    <string name="you_ve_successfully_share_your_thought">You\'ve successfully share your thought!</string>
    <string name="okay">Okay</string>
    <string name="profile_image_of_the_receiver_user">profile image of the receiver user</string>
    <string name="profile_image_of_current_user">profile image of current user</string>
    <string name="view_profile">View Profile</string>
    <string name="icon_image_of_a_bolt_for_settings">icon image of a bolt for settings</string>
    <string name="settings">Settings</string>
    <string name="full_size_of_profile_image">full size of profile image</string>
    <string name="title">Title</string>
    <string name="icon_image_of_arrow_pointing_right">icon image of arrow pointing right</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="new_book">New Book</string>
    <string name="update_delete_book">Update/Delete book</string>
    <string name="books">Books</string>
    <string name="quote">Quote</string>
    <string name="display_quote">Display quote</string>
    <string name="itunes_books">iTunes books</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_users">Search users</string>
    <string name="bookthoughts_background_intro_image">Bookthoughts background intro image</string>
    <string name="image_of_a_bolt_representing_settings">Image of a bolt representing settings</string>
    <string name="indication_image_to_click_next">Indication image to click next</string>
    <string name="image_of_quote_sent_from_the_current_user">Image of quote sent from the current user</string>
    <string name="add_book">Add Book</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="chapter_number">Chapter number</string>
    <string name="enter_new_display_name">Enter new display name</string>
    <string name="done">DONE</string>
    <string name="add_new_chapter">Add new chapter</string>
    <string name="add_new_quote">Add new quote</string>
    <string name="type_here">Type here..</string>
    <string name="this_is_the_start_new">this is the start new</string>
    <string name="loading">Loading...</string>
    <string name="new_thought_image">**New thought image!**</string>
    <string name="join_now">JOIN NOW</string>
    <string name="username">Username</string>
    <string name="display_name">Display name</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Some thing has gone wrong! Please try again later.</string>
    <string name="search">search</string>
    <string name="please_enter_username_password">Please enter username and password</string>
    <string name="oops_please_enter_username">Oops! Please enter unique username</string>
    <string name="please_enter_title_number">Please enter title and number</string>
    <string name="chapters">Chapters</string>
    <string name="chapter">Chapter</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="please_enter_a_thought_text">Please enter a thought text</string>
    <string name="you_have_successfully_saved">You have successfully favoured</string>
    <string name="fav_book_is_viewable">Favourite book is viewable in your widget</string>
    <string name="save_quotes">SAVE QUOTES</string>
    <string name="share_thoughts">SHARE THOUGHTS</string>
    <string name="discover_books">DISCOVER BOOKS</string>
    <string name="descr1">Save your favourite quotes and add thoughts to them.</string>
    <string name="descr2">Share your favourite quotes and thoughts with friends.</string>
    <string name="descr3">Discover and find your favourite reading books.</string>
    <string name="edit2">Edit</string>
    <string name="share_thought">Share thought</string>
    <string name="share_thought_with">Share thought with</string>
    <string name="sorry_cant_share_with_self">Sorry! You can\'t share quotes with yourself</string>
    <string name="oops_please_try_again_later">Oops! Please try again later</string>
</resources>
