<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.IntroActivity"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="-30dp"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:src="@drawable/introimage"
        android:contentDescription="@string/bookthoughts_background_intro_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookthoughts"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        />
    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_save_share"
        android:textSize="20sp"
        android:textColor="#535353"
        android:textAlignment="center"
        android:layout_below="@+id/name"
        />
    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_favorite_reading_companion"
        android:textSize="16sp"
        android:textColor="#6b6b6b"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_below="@+id/slogan"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        />

    <Button
        android:id="@+id/loginBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:backgroundTint="@color/colorPrimary"
        android:layout_above="@+id/signupBtnId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"/>

    <Button
        android:id="@+id/signupBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/VERTICAL_MARGIN_LARGE"/>

</RelativeLayout>