<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="16dp"
        />

    <ImageView
        android:id="@+id/camera_choice_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_below="@id/choose_text"
        android:contentDescription="@string/icon_image_of_a_camera"
        android:layout_marginTop="18dp"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:src="@drawable/camera"/>

    <TextView
        android:id="@+id/camera_choice_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/camera_choice_image_view"
        android:layout_below="@id/choose_text"
        android:text="@string/camera"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/SIDE_MARGIN_IN"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"/>

    <ImageView
        android:id="@+id/gallery_choice_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_below="@+id/camera_choice_image_view"
        android:contentDescription="@string/icon_image_of_a_picture"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:src="@drawable/gallery"/>

    <TextView
        android:id="@+id/gallery_choice_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/gallery_choice_image_view"
        android:layout_below="@id/camera_choice_text_view"
        android:text="@string/gallery"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/SIDE_MARGIN_IN"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"/>

    <Button
        android:id="@+id/choose_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gallery_choice_text_view"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginBottom="@dimen/VERTICAL_MARGIN"
        android:text="@string/cancel"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>