<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Authentication.LoginActivity">

    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_your_username"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        android:layout_below="@+id/login_text_view"
        android:hint="@string/username"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        android:layout_below="@+id/username_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/login_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:layout_below="@+id/login_password_edit_text"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="16dp"
        android:background="@color/custom_green"
        android:textColor="#ffffff"/>

</RelativeLayout>