<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SignUpActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/sign_up_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_a_username"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        android:layout_below="@+id/sign_up_textview"
        android:hint="@string/username"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        android:layout_below="@+id/username_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/reenter_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN"
        android:layout_below="@+id/password_edit_text"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:layout_below="@+id/reenter_password_edit_text"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="16dp"
        android:background="@color/custom_green"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/hidden_text_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="140sp"
        android:textColor="@color/white"
        android:background="#1579ec"/>
</RelativeLayout>