<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
    android:layout_marginStart="@dimen/SIDE_MARGIN_EX">

    <ImageView
        android:id="@+id/success_image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/success"
        android:contentDescription="@string/image_of_a_smiley_cartoon_face"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"/>

    <TextView
        android:id="@+id/success_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_below="@+id/success_image"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"/>

    <TextView
        android:id="@+id/success_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_ve_successfully_share_your_thought"
        android:textAlignment="center"
        android:textColor="#383838"
        android:textSize="20sp"
        android:layout_below="@id/success_title"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"/>

    <Button
        android:id="@+id/success_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/success_description"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:text="@string/okay"
        android:textStyle="bold"
        android:textColor="#409890"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:layout_marginBottom="@dimen/VERTICAL_MARGIN_LARGE"/>

</RelativeLayout>