<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_tab_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/profile_image_of_current_user"
        android:layout_marginStart="@dimen/SIDE_MARGIN_EX"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginBottom="@dimen/VERTICAL_MARGIN_LARGE"/>

    <TextView
        android:id="@+id/profile_tab_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/profile_tab_profile_image"
        android:layout_toStartOf="@id/profile_tab_indicator"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_IN"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_IN"/>

    <TextView
        android:id="@+id/profile_tab_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        android:textSize="18sp"
        android:layout_toEndOf="@id/profile_tab_profile_image"
        android:layout_toStartOf="@id/profile_tab_indicator"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginStart="@dimen/SIDE_MARGIN_IN"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_IN"
        android:layout_below="@id/profile_tab_username"/>

    <ImageView
        android:id="@+id/profile_tab_indicator"
        android:layout_width="20dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/VERTICAL_MARGIN_LARGE"
        android:layout_marginEnd="@dimen/SIDE_MARGIN_EX"
        android:src="@drawable/next"
        android:contentDescription="@string/indication_image_to_click_next"
        android:scaleType="centerInside"/>

</RelativeLayout>